--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="cadre">
                         <span class="filtre-logo-container">
-                            <i class="fas fa-money-bill-wave filtre-logo"></i>
+                            <i class="fas fa-money-bill-wave filtre-logo logo-economie"></i>
                         </span>
                         <span class="filtre-text-container title">
                             Économique
@@ -64,7 +64,7 @@
                     </div>
                     <div class="cadre">
                         <span class="filtre-logo-container">
-                            <i class="fas fa-child  filtre-logo"></i>
+                            <i class="fas fa-child  filtre-logo logo-familial"></i>
                         </span>
                         <span class="filtre-text-container title">
                             Familial
@@ -73,7 +73,7 @@
 
                     <div class="cadre">
                         <span class="filtre-logo-container">
-                            <i class="fas fa-heart filtre-logo"></i>
+                            <i class="fas fa-heart filtre-logo logo-romantique"></i>
                         </span>
                         <span class="filtre-text-container title">
                             Romantique
@@ -81,7 +81,7 @@
                     </div>
                     <div class="cadre">
                         <span class="filtre-logo-container">
-                            <i class="fas fa-dog filtre-logo"></i>
+                            <i class="fas fa-dog filtre-logo logo-animaux"></i>
                         </span>
                         <span class="filtre-text-container title">
                             Animaux autorisés
@@ -114,7 +114,7 @@
 
                                     <h3 class="title">Hôtel Le soleil du matin</h3>
                                     <span class="text-card-populaire">Nuit à partir de <strong>128€</strong></span>
-                                    <div class="rating-populaire-soleil">
+                                    <div class="rating rating-populaire-soleil">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -131,7 +131,7 @@
 
                                     <h3 class="title">Au coeur de l'eau<br>Chambres d'hôtes</h3>
                                     <span class="text-card-populaire">Nuit à partir de <strong>71€</strong></span>
-                                    <div class="rating-populaire-chambre">
+                                    <div class="rating rating-populaire-chambre">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -148,7 +148,7 @@
 
                                     <h3 class="title">Hôtel Tout bleu et Blanc</h3>
                                     <span class="text-card-populaire">Nuit à partir de <strong>68€</strong></span>
-                                    <div class="rating-populaire-bleu">
+                                    <div class="rating rating-populaire-bleu">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
@@ -172,7 +172,7 @@
                                         <div class="card-text">
                                             <h3 class="title">Auberge la Cannebière</h3>
                                             <span class="text-card">Nuit à partir de <strong>25€</strong></span>
-                                            <div class="rating-hebergement">
+                                            <div class="rating rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
@@ -191,7 +191,7 @@
                                         <div class="card-text">
                                             <h3 class="title">Hôtel du port</h3>
                                             <span class="text-card">Nuit à partir de <strong>52€</strong></span>
-                                            <div class="rating-hebergement">
+                                            <div class="rating rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
@@ -210,7 +210,7 @@
                                         <div class="card-text">
                                             <h3 class="title">Hôtel Les mouettes</h3>
                                             <span class="text-card">Nuit à partir de <strong>76€</strong></span>
-                                            <div class="rating-hebergement">
+                                            <div class="rating rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
