--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                 </section>
                 <!-- Section 2: Activités -->
                 <section>
+                    <!-- Box3 : Activités -->
                     <div class="box3">
                         <div class="activite-title">
                             <h2 class="title" id="ancre-activites">Activités à Marseille</h2>
@@ -347,6 +348,7 @@
         </div>
         <!-- Footer  -->
         <footer>
+            <!-- Box4 : Footer -->
             <div class="box4">
                 <div class="footer-propos">
                     <h2 class="title"> A propos</h2>
